                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 10-07-2006 changed: listcontrol onup/ondown is now respected. set them to listcontrols own id for old wraparound behavior. ( they are now the same as thumbpanels )
 - 10-07-2006 fixed: top part of ttf subtitles (hyphens and such) would get cut of in some sizes
 - 10-07-2006 added: sorting on listener count and bitrate for shoutcast directory
 - 10-07-2006 changed: subs are now in utf8 encoding. conversion is done at render time.
 - 10-07-2006 fixed: [ 1519293 ] Hide file extensions appears to affect (certain) directories
 - 10-07-2006 fixed: autostart of audio discs (mp3...) was not working
 - 10-07-2006 changed: Default bookmark name for UPnP is now "UPnP Server" instead of "Windows Media Connect (UPnP)" as this was too long for some skins like MC360
 - 10-07-2006 fixed: UPnP bookmarks now work after reboot
 - 10-07-2006 added: Network Option to autostart upnp client on boot (speeds up autodetection & upnp bookmarks)
 - 10-07-2006 changed: pre-populate friendly name in Add Network Location for UPnP Servers
 - 10-07-2006 changed: network startup is now asyncronos, doesn't delay boot
 - 10-07-2006 fixed: play dvd on vcd's would not work, while autorun would. 
 - 09-07-2006 added: Colorkey to the new setImage Python method.
 - 09-07-2006 fixed: [ 1519501 ] ListControl spincontrol down stays focused/pressed
 - 09-07-2006 fixed: [ 1519504 ] Last.fm radio no default thumb displayed
 - 08-07-2006 fixed: nav sounds completely disappear after fast scrolling
 - 08-07-2006 added: ControlImage now have function setImage(filename)